fix showcase image style issue on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1323,9 +1323,7 @@ footer .copyright{
         display: none;
       }
 
-      .services-intro .container{
-        background-size: contain;
-      }
+    
 
    
       .services-portfolio .studies{
